--- a/styles/style.sass
+++ b/styles/style.sass
@@ -14,6 +14,17 @@ $colorBlack: rgb(0, 0, 0)
 	margin: 0
 	font-family: "Roboto Slab", serif
 
+/* FUNCTIONS */
+@mixin margin2($sup_inf, $izq_der)
+  margin: $sup_inf $izq_der
+
+@mixin margin4($sup, $der, $inf, $izq)
+  margin: $sup $der $inf $izq
+
+@mixin width-height($width, $height)
+	width: $width
+	height: $height
+
 /* HEADINGS */
 
 h1,
@@ -22,9 +33,9 @@ h3,
 h4,
 h5,
 h6
+	@include margin2(0.5em, 0)
 	font-weight: 400
 	line-height: 1.2
-	margin: 0.5em 0
 	color: $colorPrimary
 
 h1
@@ -66,7 +77,7 @@ h6
 /* NAVIGATION */
 
 nav
-	background-color: lightgray
+	background-color: $colorGrey1
 	padding: 10px 30px
 	min-width: 200px
 	ul
@@ -85,7 +96,7 @@ nav
 				color: $colorGrey3
 				transition: color 0.3s
 
-			/* acá bajo tengo el selector para que encuentre la página que está seleccionada en la web */
+			/* acá bajo tengo el selector para que encuentre la página actualmente activa */
 			a[href="#"]
 				font-weight: bold
 				padding: 10px 20px
@@ -103,22 +114,19 @@ nav
 	display: flex
 	flex-wrap: wrap
 	align-items: top
-	width: 100%
-	height: 100%
+	@include width-height(100%, 100%)
 
 	& .izquierdo
 		margin-top: 1.5rem
 		display: inline-block
-		width: 49%
-		height: 100%
 		background-color: $colorGrey1
+		@include width-height(49%, 100%)
 		padding: 5px
 
 	& .derecho
 		display: inline-block
-		width: 49%
-		height: 100%
 		background-color: $colorGrey2
+		@include width-height(49%, 100%)
 		padding: 5px
 
 /* TABLE */
@@ -128,7 +136,7 @@ td
 
 table
 	width: 97%
-	margin: 2rem 0.8rem 0.2rem 0.8rem
+	@include @include margin4(2rem, 0.8rem, 0.2rem, 0.8rem)
 	border-collapse: collapse
 
 	tr
@@ -219,8 +227,8 @@ table
 
 @media (max-width: 400px)
 	table
+		@include margin4(1rem, 0.5rem, 0.1rem, 0.5rem)
 		width: 95%
-		margin: 1rem 0.5rem 0.1rem 0.5rem
 		border-collapse: collapse
 
 	.card-reporte
