--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,11 +1,13 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap");
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
 /* RESET */
 * {
   margin: 0;
   font-family: "Roboto Slab", serif;
 }
 
+/* FUNCTIONS */
 /* HEADINGS */
 h1,
 h2,
@@ -13,9 +15,9 @@ h3,
 h4,
 h5,
 h6 {
+  margin: 0.5em 0;
   font-weight: 400;
   line-height: 1.2;
-  margin: 0.5em 0;
   color: rgb(95, 95, 43);
 }
 
@@ -64,7 +66,7 @@ h6 {
 
 /* NAVIGATION */
 nav {
-  background-color: lightgray;
+  background-color: rgb(220, 220, 220);
   padding: 10px 30px;
   min-width: 200px;
 }
@@ -75,7 +77,7 @@ nav ul {
 }
 nav ul li {
   display: inline-block;
-  /* acá bajo tengo el selector para que encuentre la página que está seleccionada en la web */
+  /* acá bajo tengo el selector para que encuentre la página actualmente activa */
 }
 nav ul li a {
   display: inline-block;
@@ -112,16 +114,16 @@ nav img {
 .main-div .izquierdo {
   margin-top: 1.5rem;
   display: inline-block;
+  background-color: rgb(220, 220, 220);
   width: 49%;
   height: 100%;
-  background-color: rgb(220, 220, 220);
   padding: 5px;
 }
 .main-div .derecho {
   display: inline-block;
+  background-color: rgb(180, 180, 180);
   width: 49%;
   height: 100%;
-  background-color: rgb(180, 180, 180);
   padding: 5px;
 }
 
@@ -239,8 +241,8 @@ table thead {
 }
 @media (max-width: 400px) {
   table {
-    width: 95%;
     margin: 1rem 0.5rem 0.1rem 0.5rem;
+    width: 95%;
     border-collapse: collapse;
   }
   .card-reporte {
