--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap");
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
+@import url("../styles/css/bootstrap.min.css");
 /* RESET */
 * {
   margin: 0;
@@ -242,6 +242,7 @@ table thead {
 @media (max-width: 400px) {
   table {
     margin: 1rem 0.5rem 0.1rem 0.5rem;
+    /*no está encontrando la clase .table-sm, a pesar de que está importada de bootstrap, incluso descargando el archivo*/
     width: 95%;
     border-collapse: collapse;
   }
